@@ -20,18 +20,25 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import io.fabric8.kubernetes.api.model.EndpointAddress;
 import io.fabric8.kubernetes.api.model.EndpointSubset;
 import io.fabric8.kubernetes.api.model.Endpoints;
+import io.fabric8.kubernetes.api.model.EndpointsBuilder;
 import io.fabric8.kubernetes.api.model.EndpointsList;
+import io.fabric8.kubernetes.api.model.ObjectMetaBuilder;
 import io.fabric8.kubernetes.api.model.ObjectReference;
+import io.fabric8.kubernetes.api.model.Service;
+import io.fabric8.kubernetes.api.model.ServiceBuilder;
+import io.fabric8.kubernetes.api.model.ServiceList;
+import io.fabric8.kubernetes.api.model.ServiceListBuilder;
 import io.fabric8.kubernetes.client.KubernetesClient;
+import io.fabric8.kubernetes.client.dsl.FilterNested;
 import io.fabric8.kubernetes.client.dsl.FilterWatchListDeletable;
 import io.fabric8.kubernetes.client.dsl.MixedOperation;
 import io.fabric8.kubernetes.client.dsl.NonNamespaceOperation;
 import io.fabric8.kubernetes.client.dsl.Resource;
+import io.fabric8.kubernetes.client.dsl.ServiceResource;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
@@ -62,19 +69,22 @@ class KubernetesCatalogWatchTest {
 	private KubernetesCatalogWatch kubernetesCatalogWatch;
 
 	private static final ApplicationEventPublisher APPLICATION_EVENT_PUBLISHER = Mockito
-			.mock(ApplicationEventPublisher.class);
+		.mock(ApplicationEventPublisher.class);
 
 	private static final MixedOperation<Endpoints, EndpointsList, Resource<Endpoints>> MIXED_OPERATION = Mockito
-			.mock(MixedOperation.class);
+		.mock(MixedOperation.class);
 
 	private static final NonNamespaceOperation<Endpoints, EndpointsList, Resource<Endpoints>> NON_NAMESPACE_OPERATION = Mockito
-			.mock(NonNamespaceOperation.class);
+		.mock(NonNamespaceOperation.class);
 
 	private static final FilterWatchListDeletable<Endpoints, EndpointsList, Resource<Endpoints>> FILTER_WATCH_LIST_DELETABLE = Mockito
-			.mock(FilterWatchListDeletable.class);
+		.mock(FilterWatchListDeletable.class);
+
+	private static final FilterNested<FilterWatchListDeletable<Endpoints, EndpointsList, Resource<Endpoints>>> FILTER_NESTED = Mockito
+		.mock(FilterNested.class);
 
 	private static final ArgumentCaptor<HeartbeatEvent> HEARTBEAT_EVENT_ARGUMENT_CAPTOR = ArgumentCaptor
-			.forClass(HeartbeatEvent.class);
+		.forClass(HeartbeatEvent.class);
 
 	@AfterEach
 	void afterEach() {
@@ -88,8 +98,10 @@ class KubernetesCatalogWatchTest {
 		createInSpecificNamespaceWatcher();
 
 		when(FILTER_WATCH_LIST_DELETABLE.list())
-				.thenReturn(createSingleEndpointEndpointListByPodName("api-pod", "other-pod"))
-				.thenReturn(createSingleEndpointEndpointListByPodName("other-pod", "api-pod"));
+			.thenReturn(createSingleEndpointEndpointListByPodName("test", "api-pod", "other-pod"))
+			.thenReturn(createSingleEndpointEndpointListByPodName("test", "other-pod", "api-pod"));
+		mockServicesCall("api-pod", "test");
+		mockServicesCall("other-pod", "test");
 
 		kubernetesCatalogWatch.catalogServicesWatch();
 		// second execution on shuffleServices
@@ -103,8 +115,12 @@ class KubernetesCatalogWatchTest {
 
 		createInAllNamespaceWatcher();
 
-		when(MIXED_OPERATION.list()).thenReturn(createSingleEndpointEndpointListByPodName("api-pod", "other-pod"))
-				.thenReturn(createSingleEndpointEndpointListByPodName("other-pod", "api-pod"));
+		when(FILTER_WATCH_LIST_DELETABLE.list())
+			.thenReturn(createSingleEndpointEndpointListByPodName("test", "api-pod", "other-pod"))
+			.thenReturn(createSingleEndpointEndpointListByPodName("test", "other-pod", "api-pod"));
+
+		mockServicesCall("api-pod", "test");
+		mockServicesCall("other-pod", "test");
 
 		kubernetesCatalogWatch.catalogServicesWatch();
 		// second execution on shuffleServices
@@ -119,8 +135,10 @@ class KubernetesCatalogWatchTest {
 		createInSpecificNamespaceWatcher();
 
 		when(FILTER_WATCH_LIST_DELETABLE.list())
-				.thenReturn(createEndpointsListByServiceName("api-service", "other-service"))
-				.thenReturn(createEndpointsListByServiceName("other-service", "api-service"));
+			.thenReturn(createEndpointsListByServiceName("test", "api-service", "other-service"))
+			.thenReturn(createEndpointsListByServiceName("test", "other-service", "api-service"));
+		mockServicesCall("api-service", "test");
+		mockServicesCall("other-service", "test");
 
 		kubernetesCatalogWatch.catalogServicesWatch();
 		// second execution on shuffleServices
@@ -134,8 +152,11 @@ class KubernetesCatalogWatchTest {
 
 		createInAllNamespaceWatcher();
 
-		when(MIXED_OPERATION.list()).thenReturn(createEndpointsListByServiceName("api-service", "other-service"))
-				.thenReturn(createEndpointsListByServiceName("other-service", "api-service"));
+		when(FILTER_WATCH_LIST_DELETABLE.list())
+			.thenReturn(createEndpointsListByServiceName("test", "api-service", "other-service"))
+			.thenReturn(createEndpointsListByServiceName("test", "other-service", "api-service"));
+		mockServicesCall("api-service", "test");
+		mockServicesCall("other-service", "test");
 
 		kubernetesCatalogWatch.catalogServicesWatch();
 		// second execution on shuffleServices
@@ -150,7 +171,9 @@ class KubernetesCatalogWatchTest {
 		createInSpecificNamespaceWatcher();
 
 		when(FILTER_WATCH_LIST_DELETABLE.list())
-				.thenReturn(createSingleEndpointListWithNamespace("default", "api-pod", "other-pod"));
+			.thenReturn(createSingleEndpointListWithNamespace("default", "other-pod", "api-pod", "other-pod"));
+		mockServicesCall("api-pod", "default");
+		mockServicesCall("other-pod", "default");
 
 		kubernetesCatalogWatch.catalogServicesWatch();
 
@@ -169,8 +192,10 @@ class KubernetesCatalogWatchTest {
 
 		createInAllNamespaceWatcher();
 
-		when(MIXED_OPERATION.list())
-				.thenReturn(createSingleEndpointListWithNamespace("default", "api-pod", "other-pod"));
+		when(FILTER_WATCH_LIST_DELETABLE.list())
+			.thenReturn(createSingleEndpointListWithNamespace("default", "other-pod", "api-pod", "other-pod"));
+		mockServicesCall("api-pod", "default");
+		mockServicesCall("other-pod", "default");
 
 		kubernetesCatalogWatch.catalogServicesWatch();
 
@@ -189,8 +214,8 @@ class KubernetesCatalogWatchTest {
 
 		createInSpecificNamespaceWatcher();
 
-		EndpointsList endpoints = createSingleEndpointEndpointListWithoutSubsets();
-
+		EndpointsList endpoints = createSingleEndpointEndpointListWithoutSubsets("name", "test");
+		mockServicesCall("name", "test");
 		when(FILTER_WATCH_LIST_DELETABLE.list()).thenReturn(endpoints);
 
 		kubernetesCatalogWatch.catalogServicesWatch();
@@ -205,9 +230,10 @@ class KubernetesCatalogWatchTest {
 
 		createInAllNamespaceWatcher();
 
-		EndpointsList endpoints = createSingleEndpointEndpointListWithoutSubsets();
+		EndpointsList endpoints = createSingleEndpointEndpointListWithoutSubsets("name", "test");
+		mockServicesCall("name", "test");
 
-		when(MIXED_OPERATION.list()).thenReturn(endpoints);
+		when(FILTER_WATCH_LIST_DELETABLE.list()).thenReturn(endpoints);
 
 		kubernetesCatalogWatch.catalogServicesWatch();
 		// second execution on shuffleServices
@@ -221,7 +247,8 @@ class KubernetesCatalogWatchTest {
 
 		createInSpecificNamespaceWatcher();
 
-		EndpointsList endpoints = createSingleEndpointEndpointListByPodName("api-pod");
+		EndpointsList endpoints = createSingleEndpointEndpointListByPodName("test", "api-pod");
+		mockServicesCall("api-pod", "test");
 		endpoints.getItems().get(0).getSubsets().get(0).setAddresses(null);
 
 		when(FILTER_WATCH_LIST_DELETABLE.list()).thenReturn(endpoints);
@@ -238,10 +265,11 @@ class KubernetesCatalogWatchTest {
 
 		createInAllNamespaceWatcher();
 
-		EndpointsList endpoints = createSingleEndpointEndpointListByPodName("api-pod");
+		EndpointsList endpoints = createSingleEndpointEndpointListByPodName("test", "api-pod");
+		mockServicesCall("api-pod", "test");
 		endpoints.getItems().get(0).getSubsets().get(0).setAddresses(null);
 
-		when(MIXED_OPERATION.list()).thenReturn(endpoints);
+		when(FILTER_WATCH_LIST_DELETABLE.list()).thenReturn(endpoints);
 
 		kubernetesCatalogWatch.catalogServicesWatch();
 		// second execution on shuffleServices
@@ -255,7 +283,8 @@ class KubernetesCatalogWatchTest {
 
 		createInSpecificNamespaceWatcher();
 
-		EndpointsList endpoints = createSingleEndpointEndpointListByPodName("api-pod");
+		EndpointsList endpoints = createSingleEndpointEndpointListByPodName("test", "api-pod");
+		mockServicesCall("api-pod", "test");
 		endpoints.getItems().get(0).getSubsets().get(0).getAddresses().get(0).setTargetRef(null);
 
 		when(FILTER_WATCH_LIST_DELETABLE.list()).thenReturn(endpoints);
@@ -272,10 +301,11 @@ class KubernetesCatalogWatchTest {
 
 		createInAllNamespaceWatcher();
 
-		EndpointsList endpoints = createSingleEndpointEndpointListByPodName("api-pod");
+		EndpointsList endpoints = createSingleEndpointEndpointListByPodName("test", "api-pod");
+		mockServicesCall("api-pod", "test");
 		endpoints.getItems().get(0).getSubsets().get(0).getAddresses().get(0).setTargetRef(null);
 
-		when(MIXED_OPERATION.list()).thenReturn(endpoints);
+		when(FILTER_WATCH_LIST_DELETABLE.list()).thenReturn(endpoints);
 
 		kubernetesCatalogWatch.catalogServicesWatch();
 		// second execution on shuffleServices
@@ -284,34 +314,45 @@ class KubernetesCatalogWatchTest {
 		verify(APPLICATION_EVENT_PUBLISHER).publishEvent(any(HeartbeatEvent.class));
 	}
 
-	private EndpointsList createEndpointsListByServiceName(String... serviceNames) {
-		List<Endpoints> endpoints = stream(serviceNames).map(s -> createEndpointsByPodName(s + "-singlePodUniqueId"))
-				.collect(Collectors.toList());
+	private EndpointsList createEndpointsListByServiceName(String namespace, String... serviceNames) {
+		List<Endpoints> endpoints = stream(serviceNames)
+			.map(s -> createEndpointsByPodName(namespace, s + "-singlePodUniqueId"))
+			.toList();
 
 		EndpointsList endpointsList = new EndpointsList();
 		endpointsList.setItems(endpoints);
 		return endpointsList;
 	}
 
-	private EndpointsList createSingleEndpointEndpointListWithoutSubsets() {
-		Endpoints endpoints = new Endpoints();
+	private EndpointsList createSingleEndpointEndpointListWithoutSubsets(String name, String namespace) {
+		Endpoints endpoints = new EndpointsBuilder().withNewMetadata()
+			.withName(name)
+			.withNamespace(namespace)
+			.endMetadata()
+			.build();
 
 		EndpointsList endpointsList = new EndpointsList();
 		endpointsList.setItems(Collections.singletonList(endpoints));
 		return endpointsList;
 	}
 
-	private EndpointsList createSingleEndpointEndpointListByPodName(String... podNames) {
+	private EndpointsList createSingleEndpointEndpointListByPodName(String namespace, String... podNames) {
 		Endpoints endpoints = new Endpoints();
 		endpoints.setSubsets(createSubsetsByPodName(podNames));
+		endpoints.setMetadata(new ObjectMetaBuilder().withNamespace(namespace).build());
 
 		EndpointsList endpointsList = new EndpointsList();
 		endpointsList.setItems(Collections.singletonList(endpoints));
 		return endpointsList;
 	}
 
-	private EndpointsList createSingleEndpointListWithNamespace(String namespace, String... podNames) {
-		Endpoints endpoints = new Endpoints();
+	private EndpointsList createSingleEndpointListWithNamespace(String namespace, String endpointsName,
+			String... podNames) {
+		Endpoints endpoints = new EndpointsBuilder().withNewMetadata()
+			.withNamespace(namespace)
+			.withName(endpointsName)
+			.and()
+			.build();
 		endpoints.setSubsets(createSubsetsWithNamespace(namespace, podNames));
 
 		EndpointsList endpointsList = new EndpointsList();
@@ -319,8 +360,8 @@ class KubernetesCatalogWatchTest {
 		return endpointsList;
 	}
 
-	private Endpoints createEndpointsByPodName(String podName) {
-		Endpoints endpoints = new Endpoints();
+	private Endpoints createEndpointsByPodName(String namespace, String podName) {
+		Endpoints endpoints = new EndpointsBuilder().withNewMetadata().withNamespace(namespace).and().build();
 		endpoints.setSubsets(createSubsetsByPodName(podName));
 		return endpoints;
 	}
@@ -360,10 +401,6 @@ class KubernetesCatalogWatchTest {
 
 	private void createInAllNamespaceWatcher() {
 
-		when(CLIENT.endpoints()).thenReturn(MIXED_OPERATION);
-		when(MIXED_OPERATION.inAnyNamespace()).thenReturn(MIXED_OPERATION);
-		when(MIXED_OPERATION.withLabels(Map.of())).thenReturn(MIXED_OPERATION);
-
 		// all-namespaces = true
 		KubernetesDiscoveryProperties properties = new KubernetesDiscoveryProperties(true, true, Set.of(), true, 60,
 				false, "", Set.of(), Map.of(), "", null, 0, false);
@@ -371,6 +408,14 @@ class KubernetesCatalogWatchTest {
 		kubernetesCatalogWatch = new KubernetesCatalogWatch(CLIENT, properties, namespaceProvider);
 		kubernetesCatalogWatch.setApplicationEventPublisher(APPLICATION_EVENT_PUBLISHER);
 		kubernetesCatalogWatch.postConstruct();
+
+		when(CLIENT.endpoints()).thenReturn(MIXED_OPERATION);
+		when(MIXED_OPERATION.inAnyNamespace()).thenReturn(MIXED_OPERATION);
+		when(MIXED_OPERATION.withLabels(Map.of())).thenReturn(MIXED_OPERATION);
+		when(MIXED_OPERATION.withNewFilter()).thenReturn(FILTER_NESTED);
+		when(FILTER_NESTED.withLabels(Map.of())).thenReturn(FILTER_NESTED);
+		when(FILTER_NESTED.endFilter()).thenReturn(FILTER_WATCH_LIST_DELETABLE);
+
 	}
 
 	private void createInSpecificNamespaceWatcher() {
@@ -386,7 +431,21 @@ class KubernetesCatalogWatchTest {
 		when(namespaceProvider.getNamespace()).thenReturn("catalog-watcher-namespace");
 		when(CLIENT.endpoints()).thenReturn(MIXED_OPERATION);
 		when(MIXED_OPERATION.inNamespace("catalog-watcher-namespace")).thenReturn(NON_NAMESPACE_OPERATION);
-		when(NON_NAMESPACE_OPERATION.withLabels(Map.of())).thenReturn(FILTER_WATCH_LIST_DELETABLE);
+		when(NON_NAMESPACE_OPERATION.withNewFilter()).thenReturn(FILTER_NESTED);
+		when(FILTER_NESTED.withLabels(Map.of())).thenReturn(FILTER_NESTED);
+		when(FILTER_NESTED.endFilter()).thenReturn(FILTER_WATCH_LIST_DELETABLE);
+	}
+
+	private void mockServicesCall(String name, String namespace) {
+		MixedOperation<Service, ServiceList, ServiceResource<Service>> mixedOperation = Mockito
+			.mock(MixedOperation.class);
+		NonNamespaceOperation<Service, ServiceList, ServiceResource<Service>> nonNamespaceOperation = Mockito
+			.mock(NonNamespaceOperation.class);
+		when(CLIENT.services()).thenReturn(mixedOperation);
+		when(mixedOperation.inNamespace(namespace)).thenReturn(nonNamespaceOperation);
+		when(nonNamespaceOperation.list()).thenReturn(new ServiceListBuilder().withItems(
+				new ServiceBuilder().withNewMetadata().withName(name).withNamespace(namespace).endMetadata().build())
+			.build());
 	}
 
 }
